# MIMUW

./: .gitmodules  README.md
ipp/trees/: README.md  bigadd.c  count_functions.sh  mem_massif.sh  mem_test.sh  test_ext.sh  test_list.c  test_tree.c
ipp/trees/Files/: Makefile  file.c  file.h  list.c  list.h  solution.c  test.sh  tree.c  tree.h
ipp/trees/Tests/: add_test10000.err  add_test10000.in  add_test10000.out  (+6 more)
jnp1/zad5/: .clang-format  CMakeLists.txt  beautifier.sh  example.cpp  exception_handling.cc  keyed_queue.h  keyed_queueX.h  miniTest.cpp  throwers.h
jnp1/zad6/: decoration.cc  decoration.h  helper.cc  helper.h  person.cc  person.h
jnp1/zad6/private/: CMakeLists.txt  ChristmasTree.cc  ChristmasTree.out  check-out.sh  clang-run.sh  notatki  notatki odp
jnp3/cuda/: algebra.h  run.sh  vec.cu
jpp/prolog/: .gitignore  .gitmodules  Makefile  game.pl  levels.pl  results.csv  sokoban.pl  sokoban.py
po/weather/: README.md  pom.xml
pw/zad4/: CMakeLists.txt  alloc.c  alloc.h  test.sh  th.c
sik/projekt/: .gitignore  Doxyfile  Makefile  README.md  client.sh  get_drive.sh  part_c.txt  readme.txt  scale.sh  server.sh  test.txt  zip.sh
sik/zad1/: Makefile  echo-server.cc
sik/zad2/: CMakeLists.txt  const.h  options.cc  options.h  receiver.cc  sender.cc
so/zad3/: komendy  start.sh  test-pstree.c  test.c
so/zad4/: copy.sh  copyback.sh  plan  start.sh
www/projekt/: README.md  db.sqlite3  queries.sql
www/zad1/: README.md  UML.dia  clean.py  container.py  data.json  database.py  download.py  general.py  generator.py  models.py  prepare.sh  run.sh
(+139 files in other folders)
